--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="rypp.css">
     <link rel="stylesheet" type="text/css" href="normalize.css">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
     <script src="RYPP.js"></script>
     <title></title>
