--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	</div>
 	<div class="RYPP-playlist">
 	  <header>
-	    <h2 class="_h1 RYPP-title">Playlist title</h2>
-	    <p class="RYPP-desc">Playlist subtitle<a href="#" target="_blank">#hashtag</a></p>
+	    <h2 class="_h1 RYPP-title">Rain</h2>
+	    <p class="RYPP-desc">glitter</p>
 	  </header>
 	  <div class="RYPP-items"></div>
 	</div>
